provarAnt/00D190000000ZY2EAM/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Backoffice Operational Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Delivery Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsell/Cancellation Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Operational Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill - RSD Approval Req.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Delivery Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Dissatisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlight Powerpack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - Technology Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zero Out Past Due</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Request_Approved__c</fullName>
        <label>Credit Request Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMD_Error_Comments__c</fullName>
        <label>DMD Error Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMD_Error_Reason__c</fullName>
        <label>DMD Error Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Fail - Add&apos;l Entered w/o Req Base Pkg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Ad Tag Click-Thru Url Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Bill as Transactional Not Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Clarification/Confirmation Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Click Thru Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Coop Not Applied to Leaderboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Dealer Not Set Up in TIM Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Dealership Phone Number Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Duplicate Contract Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Email Request Not Sent to BBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Enhancement Was Not Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Entered Under Inactive Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Entered Under Incorrect Dealer ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - EQS Instructions Not Followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Fax/Email Address Missing for NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Google DBM Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Google DBM S-Shot Not Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Graphics Have Misspelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Graphics Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Graphics Not Loaded in FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Graphics - Update/Remove CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Header Graphic Not Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - ID/Store ID Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Illegible Sales Order/ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Advertised Make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Bill-to ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Text/XML Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect # of Slots Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect BAC/Dealer Code Entered</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMD_Error__c</fullName>
        <label>DMD Error</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMD_QA_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for DMD Reworks process</description>
        <inlineHelpText>Check for DMD Reworks that need to be approved by QA.</inlineHelpText>
        <label>DMD QA Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMD_QA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMD QA Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Delivered__c</fullName>
        <label>Date Contract Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Product_Delivered__c</fullName>
        <label>Date Product Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Nameplates__c</fullName>
        <label>Dealer Nameplates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <formula>Contract__r.Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APFD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contract__c</fullName>
        <label>Duplicate Contract</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If field is selected, do not require a value in the &quot;ESO Order ID&quot; field</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESO_Contract_Name__c</fullName>
        <label>ESO Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_HomeNet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box only when you need to send this case to HomeNet</inlineHelpText>
        <label>Escalate to HomeNet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FM_Config_Error__c</fullName>
        <label>FM Config Error</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FManager_URL__c</fullName>
        <label>Additional Information</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date_Image__c</fullName>
        <formula>IF (  ISBLANK(Follow_Up_Date__c), 
  &quot;&quot;,
  IF( Follow_Up_Date__c &lt; Today(), 
    TEXT(MONTH(Follow_Up_Date__c))+&quot;/&quot; +TEXT(DAY(Follow_Up_Date__c))+&quot;/&quot; + TEXT(YEAR(Follow_Up_Date__c)) &amp; &quot; &quot; &amp; IMAGE(&quot;/resource/casePriorityImages/Follow_Up_Expired.png&quot;, &quot;&quot;),
    TEXT(MONTH(Follow_Up_Date__c))+&quot;/&quot; +TEXT(DAY(Follow_Up_Date__c))+&quot;/&quot; +TEXT(YEAR(Follow_Up_Date__c))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <inlineHelpText>Date to follow up on this case</inlineHelpText>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasChildCases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by a trigger if a child case was created.</description>
        <label>HasChildCases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeNet_TrackID__c</fullName>
        <label>HomeNet TrackID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>AT.Com Initiated - Fraudulent Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated – Contract Cannot Stand Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non-payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non –Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated -Switch Product Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Unauthorized Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated - Economic Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated - Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Inventory Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated  - Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Price &amp; Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Refuse to provide a Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Satisfaction of (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Satisfaction of (Sales &amp; Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Unauthorized Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery – Order Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery – Sales Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - Co Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - Haystack Initiated switch Product/Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery -  Co Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery - Sales Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Credit Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Inventory Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – No Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Order Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Sales Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Error_Comments__c</fullName>
        <label>Inventory Error Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Error_Reason__c</fullName>
        <label>Inventory Error Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Fail - Add&apos;l Entered w/o Req Base Pkg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Ad Tag Click-Thru Url Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Bill as Transactional Not Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Cert. Vehicles - None Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Clarification/Confirmation Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Contract Linked Incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Coop Not Applied to Leaderboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Dealer Not Set Up in TIM Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Dealership Phone Number Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Duplicate Contract Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Email Request Not Sent to BBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Enhancement Was Not Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Entered Under Inactive Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Entered Under Incorrect Dealer ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Fax/Email Address Missing for NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Graphics Not Loaded in FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Header Graphic Not Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - ID/Store ID Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Illegible Sales Order/ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Advertised Make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Bill-to ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect/Missing Text/XML Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect # of Slots Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect BAC/Dealer Code Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect DMA Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect Graphics Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect Info in Google DBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect Info in SSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Incorrect Info in TIM Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Error__c</fullName>
        <label>Inventory Error</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issued_Credit_Amount__c</fullName>
        <label>Issued Credit Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issued_Credit_Date__c</fullName>
        <label>Issued Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Read-only Date/time field populated by workflow each time a new inbound email message is received.</description>
        <label>Last Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point__c</fullName>
        <description>Displays the most recent time if a Case Comment or Activity has been created</description>
        <label>Last Touch Point</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lot_Size_New__c</fullName>
        <label>Lot Size - New</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Used__c</fullName>
        <label>Lot Size_Used</label>
        <picklist>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_Accounts__c</fullName>
        <formula>IF(
OR(
Account.SVOC_Region__c =&quot;35&quot;,
Account.SVOC_Region__c=&quot;43&quot;,
Account.SVOC_Region__c=&quot;44&quot;),
&quot;Yes&quot;, 
&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major Accounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales_Volume__c</fullName>
        <label>Monthly Sales Volume</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>/*Does the case owner have the logged in user as a manager?*/
/* Matches to Managers looking at users */ 
/*IF( 
OR ( 
Owner:User.ManagerId = $User.Id, 
Owner:User.Manager.Manager.Id  = $User.Id, 
Owner:User.Manager.Manager.Manager.Id = $User.Id, 
Owner:User.Manager.Manager.Manager.Manager.Id = $User.Id, 
Owner:User.Manager.Manager.Manager.Manager.Manager.Id = $User.Id, 
Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Id = $User.Id, 
Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id = $User.Id, 
Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id = $User.Id 
), 
&quot;Yes&quot;, 
&quot;No&quot; 
)*/
&quot;Yes&quot; /*take this out once the rest is fixed*/</formula>
        <label>My Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_case__c</fullName>
        <formula>if (($User.Id = CreatedById &amp;&amp; OwnerId !=$User.Id) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>My case?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Creative_Brief__c</fullName>
        <label>New Creative Brief</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Message_Indicator__c</fullName>
        <description>If &quot;New Message Received&quot; is true this will show a red flag.</description>
        <formula>IF(New_Message_Received__c = TRUE,
IMAGE(&quot;https://c.cs7.content.force.com/servlet/servlet.ImageServer?id=015M00000005x2z&amp;oid=00DM0000000F61x&amp;lastMod=1379003269000&quot;,&quot;red flag&quot;,30,30),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Message Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Message_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox controlled by workflow.  It is set to true on a new inbound emailmessage (whether from the customer or anyone else), and set to false by sending an outbound message or marking the case resolved.</description>
        <label>New Message Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Extensions__c</fullName>
        <label>Number of Extensions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Ownership_Changes__c</fullName>
        <description>Read-only field that increments each time the case changes hands.  Should be &quot;1&quot; for a one-and-done case and increment each time the case is assigned to a new queue or person.</description>
        <label>Number of Ownership Changes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Days_to_Resolve__c</fullName>
        <description>Haystak Field to calculate the number of days the case took to resolve</description>
        <formula>CreatedDate - ClosedDate</formula>
        <label># Of Days to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnMyTeam_Same_Manager__c</fullName>
        <formula>Owner:User.OnMyTeam_Same_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnMyTeam - Same Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK( Case_Order__r.OpportunityId , Case_Order__r.Opportunity.Name,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Entry_Fail_Error_Comments__c</fullName>
        <label>Order Entry Fail Error Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>